# terminal-text-editor-cpp

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/: editor.h
src/: main.cpp
